apps/inventory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: registry.chaosdorf.space/inventory:20240419
        resources:
          limits:
            cpu: 250m
            memory: 512M
          requests:
            cpu: 50m
            memory: 512M
        ports:
        - containerPort: 8000
          name: web
        volumeMounts:
        - name: data
          mountPath: "/app"
          readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: inventory-data
