apps/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: web
