apps/inventory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory
  namespace: inventory
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: inventory.chaosdorf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 8000
  tls:
    - hosts:
      - inventory.chaosdorf.space
      secretName: ingress-tls
